--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.7'
 }
 
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
 //apply plugin: LibraPlugin
 //
 //libra {
